Finished Sprint 5 - Safety & Moderation features

--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,12 @@ TIPS_HMAC_SECRET=your_tips_hmac_secret_here_32plus_bytes
 
 # Security
 SECRET_KEY=your_secret_key_here
+INTERNAL_BOT_SECRET=your_internal_bot_secret_32plus_bytes
+
+# Admin (for /admin endpoints)
+ADMIN_USER=admin
+ADMIN_PASS=changeme
+MOD_CHAT_ID=  # Optional: Telegram chat ID for moderation alerts
 
 # Environment
 ENVIRONMENT=development
