--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,9 @@ env/
 
 # Environment variables
 .env
-.env.local
+.env.*
+!.env.example
+.envrc
 
 # Database
 *.db
@@ -60,3 +62,24 @@ alembic/versions/*.pyc
 
 # Docker
 .docker/
+docker-compose.override.yml
+
+# Secrets & Credentials
+*.pem
+*.key
+*.cert
+*.crt
+secrets/
+credentials/
+*.secret
+
+# Redis dumps
+dump.rdb
+*.rdb
+
+# Temporary files
+tmp/
+temp/
+*.tmp
+*.bak
+*.swp
